--- a/Frontend_and_UI_Design/Login Signup Page/index.html
+++ b/Frontend_and_UI_Design/Login Signup Page/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css//index.css" />
+    <link rel="stylesheet" href="./css/index.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=MUDKTY+WTVolkolakGrotesque-Light:wght@300&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat Alternates:wght@400;500;600&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=MADE Evolve Sans EVO:wght@500&display=swap" />
