--- a/Frontend_and_UI_Design/Login Signup Page/index.html
+++ b/Frontend_and_UI_Design/Login Signup Page/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/index.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=MUDKTY+WTVolkolakGrotesque-Light:wght@300&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat Alternates:wght@400;500;600&display=swap" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=MADE Evolve Sans EVO:wght@500&display=swap" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -14,6 +13,7 @@
             <div class="rectangle-5">
                 <div class="company-icon">
                     <img class="image" alt="" src="./public/img1.svg">
+                    <div class="logoname">MED.AI</div>
                 </div>
                 <div class="nav">
                     <a href="#" class="contact">Contact us</a>
@@ -23,7 +23,7 @@
             </div>
                 <div class="login">
                     <div class="vector-login">
-                        <img class="image" alt="" src="./public/img2.svg">
+                        <img class="image im2" alt="" src="./public/img2.svg">
                     </div>
                     <div class="line-div"></div>
                     <div class="rightlogin">
@@ -46,7 +46,7 @@
                             <div class="submitbutton">
                                 <input type="submit" value="Submit"></input>
                             </div>
-                            <div class="checkboxes">
+                            <!-- <div class="checkboxes">
                                 <div class="checkbox1">
                                     <input type="checkbox"  name="remember" value="coding" />
                                     <span class="geekmark"></span>
@@ -58,7 +58,7 @@
                                     <label>Forgot password</label>
                                 </div>
                                 
-                            </div>
+                            </div> -->
                         </form>
                         
                     </div>
