--- a/Frontend_and_UI_Design/p-signup-param/index.html
+++ b/Frontend_and_UI_Design/p-signup-param/index.html
@@ -4,37 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat Alternates:wght@400;500;600&display=swap" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
+    <title>Patient signup</title>
 </head>
 <body>
     
     <div class="navbar">
-        <!-- <div class="company-icon">
-            <img class="image" alt="" src="./public/logo.svg">
-        </div> -->
-        <div class="logo2">
-            <div class="logo">
-          <svg style="margin-left: 40px;" width="72" height="70" viewBox="0 0 72 70" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M27.808 37.748H25.0272C25.2259 27.99 25.5834 7.81923 25.4245 5.19998C25.2656 2.58073 28.6687 0.641973 30.3902 0H40.9175C44.4134 0.462221 45.9494 3.53085 46.2805 5.19998V19.2592H43.6983V5.58517C43.6983 3.27406 41.3148 2.56789 40.123 2.5037H31.1847C28.8012 2.5037 27.9404 4.8148 27.808 5.97035V37.748Z" fill="#E61616"></path>
-              <path d="M32.4829 25.3969V22.7006C42.5468 22.8932 63.3498 23.2399 66.0512 23.0858C68.7525 22.9317 70.752 26.2315 71.4141 27.9006V38.108C70.9374 41.4976 67.7726 42.987 66.0512 43.308H51.5513V40.8043H65.6539C68.0374 40.8043 68.7657 38.4932 68.832 37.3376V28.671C68.832 26.3599 66.4484 25.5253 65.2566 25.3969L32.4829 25.3969Z" fill="#5247D2"></path>
-              <path d="M43.4996 31.3925H46.2804C46.0818 41.1505 45.7242 61.3213 45.8831 63.9405C46.042 66.5598 42.6389 68.4985 40.9174 69.1405H30.3901C26.8943 68.6783 25.3582 65.6097 25.0271 63.9405L25.0271 49.8813H27.6093L27.6093 63.5553C27.6093 65.8664 29.9929 66.5726 31.1846 66.6368H40.1229C42.5065 66.6368 43.3672 64.3257 43.4996 63.1702L43.4996 31.3925Z" fill="#5247D2"></path>
-              <path d="M38.9312 40.8295V43.5258C28.8673 43.3332 8.06432 42.9865 5.36297 43.1406C2.66162 43.2947 0.662095 39.9949 0 38.3258L0 28.1184C0.476708 24.7288 3.64152 23.2394 5.36297 22.9184H19.8628V25.4221H5.76023C3.37668 25.4221 2.64838 27.7332 2.58217 28.8888L2.58217 37.5554C2.58217 39.8665 4.96571 40.7011 6.15748 40.8295H38.9312Z" fill="#E61616"></path>
-              </svg>
+        <div class="logo">
+            <img src="public/img1.svg" alt="">
+            <div class="logoname">
+                MED.AI
             </div>
-          <div class="logoname">
-            MED.AI
-          </div>
-            </div>
+        </div>
         <div class="nav">
+            <a href="#" class="logsign">Home</a>
             <a href="#contact" class="contact">Contact us</a>
             <a href="#contact" class="about">About us</a>
             <a href="#" class="logsign">Login</a>
-            <a href="#" class="logsign">Sign up</a>
         </div>
     </div>
 
     <div class="welcome">
-        <p>Welcome to &nbsp;<strong class="medAI">MED.AI</strong></p>
+        <p>Welcome to <span class="medAI">MED.AI</span></p>
     </div>
 
     <div class="instruction">
@@ -98,9 +90,6 @@
             </div>
         </div>
 
-        <div class="background"></div>
-
-        <div class="back2"></div>
         <div class="align">
             <button type="submit" class="signup">Create account</button>
         </div>
@@ -111,5 +100,12 @@
 
     </form>
 
+    <div class="background">
+
+    </div>
+    <div class="back2">
+        <img src="public/Ellipse_13.svg">
+    </div>
+    
 </body>
 </html>
