--- a/Frontend_and_UI_Design/Login Signup Page/index.html
+++ b/Frontend_and_UI_Design/Login Signup Page/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="./css/index.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat Alternates:wght@400;500;600&display=swap" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <link rel="icon" href="public/favicon.ico">
+    <title>Login</title>
 </head>
 <body>
     <div class="homepage">
