--- a/Frontend_and_UI_Design/p-signup-param/index.html
+++ b/Frontend_and_UI_Design/p-signup-param/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat Alternates:wght@400;500;600&display=swap" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
+    <link rel="icon" href="public/favicon.ico">
     <title>Patient signup</title>
 </head>
 <body>
