Changes in psignup page

--- a/Frontend_and_UI_Design/p-signup-param/index.html
+++ b/Frontend_and_UI_Design/p-signup-param/index.html
@@ -6,14 +6,14 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat Alternates:wght@400;500;600&display=swap" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
-    <link rel="icon" href="public/favicon.ico">
+    <link rel="icon" href="./public/favicon.ico">
     <title>Patient signup</title>
 </head>
 <body>
     
     <div class="navbar">
         <div class="logo">
-            <img src="public/img1.svg" alt="">
+            <img src="./public/img1.svg" alt="">
             <div class="logoname">
                 MED.AI
             </div>
@@ -95,9 +95,9 @@
             <button type="submit" class="signup">Create account</button>
         </div>
 
-        <div class="log">
+        <!-- <div class="log">
             <h4 class="small">Already a member? <a href="login" class="small">Login</a></h4>
-        </div>
+        </div> -->
 
     </form>
 
@@ -105,7 +105,7 @@
 
     </div>
     <div class="back2">
-        <img src="public/Ellipse_13.svg">
+        <img src="./public/Ellipse_13.svg">
     </div>
     
 </body>
