Mid evaluation docs
docs upload and minor change in homepage-added scroll behaviour

--- a/Frontend_and_UI_Design/Homepage/index.html
+++ b/Frontend_and_UI_Design/Homepage/index.html
@@ -22,7 +22,7 @@
             </div>
             <div class="nav">
                 <a href="#contact" class="contact">Contact us</a>
-                <a href="#contact" class="about">About us</a>
+                <a href="#aboutus" class="about">About us</a>
                 <a href="#" class="logsign">Login</a>
                 <a href="#" class="logsign">Sign up</a>
             </div>
@@ -62,7 +62,7 @@
     
     <!-- About us -->
 
-    <div class="aboutus">
+    <div class="aboutus" id="aboutus">
         <div class="head">About Us</div>
         <div class="rect24">
             <div class="text">Welcome to <b style="font-family:Arial, Helvetica, sans-serif;" >MED AI!</b><br><br> Our website is home to a revolutionary Machine Learning model that is poised to transform the way healthcare operates. Here we predict diseases with remarkable accuracy from patient's data. <br><br>Say goodbye to uncertainty and hello to proactive healthcare. Explore the future of diagnosis with us!</div>
@@ -78,7 +78,7 @@
 
     <div class="line"></div>
 
-    <div class="contactandlogo">
+    <div class="contactandlogo" id="contact">
         <div class="logoandname">
             <div class="company-icon"><img class="image" alt="" src="./public/logo.svg"></div>
             <div class="logoname">MED.AI</div>
