made Allpages folder consisting of current Pages with routing

--- a/Frontend_and_UI_Design/AllPages/psignup.html
+++ b/Frontend_and_UI_Design/AllPages/psignup.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/psignup.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat Alternates:wght@400;500;600&display=swap" />
+    <link href="https://db.onlinewebfonts.com/c/1938c6d3ea712f9bdcf348aa789f5d68?family=MADEEvolveSansEVO" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
     <link rel="icon" href="./public/favicon.ico">
     <title>Patient signup</title>
@@ -13,16 +14,16 @@
     
     <div class="navbar">
         <div class="logo">
-            <img src="./public/img1.svg" alt="">
+            <img src="./public/logo.svg" alt="">
             <div class="logoname">
                 MED.AI
             </div>
         </div>
         <div class="nav">
-            <a href="../Homepage/index.html" class="logsign">Home</a>
-            <a href="../Homepage/index.html#contact" class="contact">Contact us</a>
-            <a href="../Homepage/index.html#line1" class="about">About us</a>
-            <a href="../Login Signup Page/index.html" class="logsign">Login</a>
+            <a href="./homepage.html" class="logsign">Home</a>
+            <a href="./homepage.html#contact" class="contact">Contact us</a>
+            <a href="./homepage.html#line1" class="about">About us</a>
+            <a href="./login.html" class="logsign">Login</a>
         </div>
     </div>
     <div class="welcome">
@@ -86,7 +87,7 @@
             </div>
 
             <div class="image">
-                <img src="./public/frame.svg" alt="">
+                <img src="./public/Frame.svg" alt="">
             </div>
         </div>
 
