--- a/Frontend_and_UI_Design/DoctorOrPatient/index.html
+++ b/Frontend_and_UI_Design/DoctorOrPatient/index.html
@@ -18,9 +18,9 @@
                 <div class="logoname">MED.AI</div>
             </div>
             <div class="nav">
-                <a href="#" class="contact">Contact us</a>
-                <a href="#" class="about">About us</a>
-                <a href="#" class="logsign">Login/Sign up</a>
+                <a href="../Homepage/index.html#contact" class="contact">Contact us</a>
+                <a href="../Homepage/index.html#line1" class="about">About us</a>
+                <a href="../Login Signup Page/index.html" class="logsign">Login</a>
             </div>
         </div>
     </div>
@@ -35,8 +35,8 @@
         <div class="you_are_a">
             you are a
             <div class="UserType">
-                <a href=""><button class="button doctor">Doctor</button></a>
-                <a href=""> <button class="button patient">Patient</button></a>
+                <a href="#"><button class="button doctor">Doctor</button></a>
+                <a href="../p-signup-param/index.html"> <button class="button patient">Patient</button></a>
                                       
             </div>
          </div>
