--- a/Frontend_and_UI_Design/Login Signup Page/index.html
+++ b/Frontend_and_UI_Design/Login Signup Page/index.html
@@ -17,9 +17,9 @@
                     <div class="logoname">MED.AI</div>
                 </div>
                 <div class="nav">
-                    <a href="#" class="contact">Contact us</a>
-                    <a href="#" class="about">About us</a>
-                    <a href="#" class="logsign">Login/Sign up</a>
+                    <a href="../Homepage/index.html#contact" class="contact">Contact us</a>
+                    <a href="../Homepage/index.html#line1" class="about">About us</a>
+                    <a href="../DoctorOrPatient/index.html" class="logsign">Sign up</a>
                 </div>
             </div>
                 <div class="login">
