Changes in doctorHome Page

--- a/Frontend_and_UI_Design/Django_Pages_2/doctorhome.html
+++ b/Frontend_and_UI_Design/Django_Pages_2/doctorhome.html
@@ -2,9 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>doctorhome</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/doctorhome.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat Alternates:wght@400;500;600&display=swap" />
+    <link href="https://db.onlinewebfonts.com/c/1938c6d3ea712f9bdcf348aa789f5d68?family=MADEEvolveSansEVO" rel="stylesheet" type="text/css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">    
+    <link rel="icon" href="public/favicon.ico">
+    <title>Doctor</title>
 </head>
 <body>
-<h1>doctor here</h1>
+    <div class="ourmodels">
+        <div class="head">Select your model</div>
+        <div class="rect20and21">
+            <a href="" class="rect">Diabetes</a>
+            <a href="" class="rect">Heart</a>
+            
+        </div>
+        <div class="rect22and23"> 
+            <a href="" class="rect">Coming Soon</a>
+            <a href="" class="rect">Coming Soon</a>
+
+        </div>
+    </div>
 </body>
 </html>
