HomePage hyperlink for Logo

--- a/Frontend_and_UI_Design/Django_Pages_2/psignup.html
+++ b/Frontend_and_UI_Design/Django_Pages_2/psignup.html
@@ -13,12 +13,10 @@
 <body>
     
     <div class="navbar">
-        <a href="./homepage.html">
-            <div class="logo" >
-                <img src="./public/logo.svg" alt="">
-                <div class="logoname">
-                    MED.AI
-                </div>
+        <a href="./homepage.html" class="logo">
+            <img src="./public/logo.svg" alt="">
+            <div class="logoname">
+                MED.AI
             </div>
         </a>
         
