--- a/Frontend_and_UI_Design/Django_Pages_2/doc_or_pat.html
+++ b/Frontend_and_UI_Design/Django_Pages_2/doc_or_pat.html
@@ -13,10 +13,10 @@
 <body>
     <div class="homepage">
         <div class="rectangle-5">
-            <div class="company-icon">
+            <a href="./homepage.html" class="company-icon">
                 <img class="image" alt="" src="./public/logo.svg">
                 <div class="logoname">MED.AI</div>
-            </div>
+            </a>
             <div class="nav">
                 <a href="./homepage.html#contact" class="contact">Contact us</a>
                 <a href="./homepage.html#line1" class="about">About us</a>
