--- a/Frontend_and_UI_Design/Django_Pages_2/Heart_Disease.html
+++ b/Frontend_and_UI_Design/Django_Pages_2/Heart_Disease.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="/Frontend_and_UI_Design/Django_Pages_2/css/Heart_Disease.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat Alternates:wght@400;500;600&display=swap" />
     <link href="https://db.onlinewebfonts.com/c/1938c6d3ea712f9bdcf348aa789f5d68?family=MADEEvolveSansEVO" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">    
     <link rel="icon" href="public/favicon.ico">
-    <title>Diabetes Prediction</title>
+    <title>Heart Disease</title>
     
 </head>
 <body>
@@ -17,7 +17,7 @@
         <div class="header">
             <div class="logo_with_name">
                 <div class="logo">
-                    <img src="./public/logo.svg" alt="MedAI logo">
+                    <img src="/Frontend_and_UI_Design/Django_Pages_2/public/favicon.ico" alt="MedAI logo">
                 </div>
 
                 <div class="MEDAI">
@@ -32,7 +32,7 @@
 
             <div class="Doctor_Name">
                 <input type="text" class="doctorNameInput" placeholder="Name Of Doctor" readonly>
-                <img src="./public/user.svg" alt="User">
+                <img src="/Frontend_and_UI_Design/Django_Pages_2/public/user.svg" alt="User">
             </div>
 
         </div>
@@ -40,13 +40,13 @@
         <div class="container1">
             <div class="LeftPart">
 
-                <div class="Diabetes_Prediction"> 
-                    Diabetes Prediction
+                <div class="Heart_Disease"> 
+                    Heart Disease
                 </div>
 
                 <div class="ellipse10">
                     <div class="ellipse11">
-                        <div class="diabetes_img"><img src="./public/FrameDiabetes.svg" alt="">
+                        <div class="HDisease_Prediction"><img src="/Frontend_and_UI_Design/Django_Pages_2/public/H_Disease.svg" alt="">
                     </div>   
                 </div>
             </div>
@@ -106,8 +106,10 @@
 
             </div>
             <div class="Box1">
+
                 <Div class="GIF">
-                    <img src="https://www.figma.com/file/hN3Ifs6FNCKexSSf0pMOda/image/d009a3c45532e0fbd721c2c10814be70e208f5a8" alt="PredictionImage">
+                    <div class="whitebox"></div>
+                    <img src="https://www.figma.com/file/hN3Ifs6FNCKexSSf0pMOda/image/7900f0d4966a772717ec069e2a2ee7a3d0a1b8ea?fuid=1285195785679185638" alt="PredictionImage">
                 </Div>
                     <input type="text" name="" id="">
             </div>
