--- a/Frontend_and_UI_Design/Static pages/Heart page/HeartStaticPage.html
+++ b/Frontend_and_UI_Design/Static pages/Heart page/HeartStaticPage.html
@@ -1,4 +1,44 @@
 <div class="heart-static-page">
+  <div class="ellipse-18"></div>
+  <svg
+    class="ellipse-17"
+    width="602"
+    height="394"
+    viewBox="0 0 602 394"
+    fill="none"
+    xmlns="http://www.w3.org/2000/svg"
+  >
+    <g filter="url(#filter0_f_42_8)">
+      <path
+        d="M602 197C602 305.8 467.238 394 301 394C134.762 394 0 305.8 0 197C0 88.1999 134.762 0 301 0C467.238 0 602 88.1999 602 197Z"
+        fill="#79A2FF"
+      />
+    </g>
+    <defs>
+      <filter
+        id="filter0_f_42_8"
+        x="-400"
+        y="-400"
+        width="1402"
+        height="1194"
+        filterUnits="userSpaceOnUse"
+        color-interpolation-filters="sRGB"
+      >
+        <feFlood flood-opacity="0" result="BackgroundImageFix" />
+        <feBlend
+          mode="normal"
+          in="SourceGraphic"
+          in2="BackgroundImageFix"
+          result="shape"
+        />
+        <feGaussianBlur
+          stdDeviation="200"
+          result="effect1_foregroundBlur_42_8"
+        />
+      </filter>
+    </defs>
+  </svg>
+
   <svg
     class="vector-1"
     width="24"
@@ -27,6 +67,8 @@
     />
   </svg>
 
+  <div class="ellipse-13"></div>
+  <div class="ellipse-16"></div>
   <svg
     class="vector-13"
     width="24"
@@ -64,8 +106,46 @@
   <div class="about-cardiovascular-disease">About Cardiovascular Disease</div>
   <div class="about-our-ai-model">About our Ai Model</div>
   <div class="model-accuracy">Model Accuracy</div>
-  <div class="about-our-dataset">About our Dataset</div>
   <div class="dataset-overview">Dataset Overview</div>
+  <svg
+    class="ellipse-15"
+    width="602"
+    height="394"
+    viewBox="0 0 602 394"
+    fill="none"
+    xmlns="http://www.w3.org/2000/svg"
+  >
+    <g filter="url(#filter0_f_34_23)">
+      <path
+        d="M602 197C602 305.8 467.238 394 301 394C134.762 394 0 305.8 0 197C0 88.1999 134.762 0 301 0C467.238 0 602 88.1999 602 197Z"
+        fill="#79A2FF"
+      />
+    </g>
+    <defs>
+      <filter
+        id="filter0_f_34_23"
+        x="-400"
+        y="-400"
+        width="1402"
+        height="1194"
+        filterUnits="userSpaceOnUse"
+        color-interpolation-filters="sRGB"
+      >
+        <feFlood flood-opacity="0" result="BackgroundImageFix" />
+        <feBlend
+          mode="normal"
+          in="SourceGraphic"
+          in2="BackgroundImageFix"
+          result="shape"
+        />
+        <feGaussianBlur
+          stdDeviation="200"
+          result="effect1_foregroundBlur_34_23"
+        />
+      </filter>
+    </defs>
+  </svg>
+
   <div
     class="our-dataset-dating-back-to-1988-is-comprised-of-four-main-databases-cleveland-hungary-switzerland-and-long-beach-v-these-databases-collectively-contain-76-attributes-each-serving-a-specific-purpose-in-the-diagnosis-of-heart-diseases-the-most-crucial-attribute-the-target-field-indicates-the-presence-of-heart-disease-in-the-patient-denoted-as-an-integer-value-where-0-signifies-no-disease-and-1-represents-the-presence-of-disease"
   >
@@ -144,7 +224,7 @@
     class="https-lottiefiles-com-animations-data-scanning-9-p-3-as-kkz-59"
     src="https-lottiefiles-com-animations-data-scanning-9-p-3-as-kkz-59.png"
   />
-  <div class="ellipse-13"></div>
+  <div class="ellipse-132"></div>
   <svg
     class="ellipse-14"
     width="602"
@@ -179,45 +259,6 @@
         <feGaussianBlur
           stdDeviation="200"
           result="effect1_foregroundBlur_4_431"
-        />
-      </filter>
-    </defs>
-  </svg>
-
-  <svg
-    class="ellipse-15"
-    width="602"
-    height="394"
-    viewBox="0 0 602 394"
-    fill="none"
-    xmlns="http://www.w3.org/2000/svg"
-  >
-    <g filter="url(#filter0_f_34_23)">
-      <path
-        d="M602 197C602 305.8 467.238 394 301 394C134.762 394 0 305.8 0 197C0 88.1999 134.762 0 301 0C467.238 0 602 88.1999 602 197Z"
-        fill="#79A2FF"
-      />
-    </g>
-    <defs>
-      <filter
-        id="filter0_f_34_23"
-        x="-400"
-        y="-400"
-        width="1402"
-        height="1194"
-        filterUnits="userSpaceOnUse"
-        color-interpolation-filters="sRGB"
-      >
-        <feFlood flood-opacity="0" result="BackgroundImageFix" />
-        <feBlend
-          mode="normal"
-          in="SourceGraphic"
-          in2="BackgroundImageFix"
-          result="shape"
-        />
-        <feGaussianBlur
-          stdDeviation="200"
-          result="effect1_foregroundBlur_34_23"
         />
       </filter>
     </defs>
@@ -269,18 +310,14 @@
   />
   <div class="confusion-matrix">Confusion matrix</div>
   <div class="classification-report">Classification report</div>
+  <div class="about-our-dataset">About our Dataset</div>
   <div class="working-of-the-diagnostic-expert-system">
     Working of the Diagnostic Expert System
   </div>
   <img
     class="https-lottiefiles-com-animations-ai-powered-marketing-tools-abstract-jwxvm-kb-rxh"
     src="https-lottiefiles-com-animations-ai-powered-marketing-tools-abstract-jwxvm-kb-rxh.png"
-  /><img
-    class="juicy-woman-with-graph-chart-1"
-    src="juicy-woman-with-graph-chart-1.png"
-  />
-  <div class="ellipse-132"></div>
-  <img class="_10606210-9817-1" src="_10606210-9817-1.png" />
+  /><img class="_10606210-9817-1" src="_10606210-9817-1.png" />
   <div
     class="harnessing-the-power-of-artificial-intelligence-our-advanced-system-has-been-meticulously-crafted-to-revolutionize-early-detection-and-intervention-thereby-significantly-improving-cardiovascular-health-outcomes"
   >
