--- a/Frontend_and_UI_Design/Static pages/Diabetes page/DiabetesStaticPage.html
+++ b/Frontend_and_UI_Design/Static pages/Diabetes page/DiabetesStaticPage.html
@@ -134,7 +134,9 @@
   <img
     class="_25553239-79-z-2203-w-009-n-001-124-c-p-6-124-1"
     src="_25553239-79-z-2203-w-009-n-001-124-c-p-6-124-1.png"
-  /><img
+  />
+  <div class="ellipse-19"></div>
+  <img
     class="https-lottiefiles-com-animations-data-scanning-9-p-3-as-kkz-59"
     src="https-lottiefiles-com-animations-data-scanning-9-p-3-as-kkz-59.png"
   />
@@ -179,14 +181,14 @@
   </svg>
 
   <svg
-    class="ellipse-15"
+    class="ellipse-16"
     width="602"
     height="394"
     viewBox="0 0 602 394"
     fill="none"
     xmlns="http://www.w3.org/2000/svg"
   >
-    <g filter="url(#filter0_f_34_56)">
+    <g filter="url(#filter0_f_42_2)">
       <path
         d="M602 197C602 305.8 467.238 394 301 394C134.762 394 0 305.8 0 197C0 88.1999 134.762 0 301 0C467.238 0 602 88.1999 602 197Z"
         fill="#79A2FF"
@@ -194,7 +196,7 @@
     </g>
     <defs>
       <filter
-        id="filter0_f_34_56"
+        id="filter0_f_42_2"
         x="-400"
         y="-400"
         width="1402"
@@ -211,7 +213,85 @@
         />
         <feGaussianBlur
           stdDeviation="200"
-          result="effect1_foregroundBlur_34_56"
+          result="effect1_foregroundBlur_42_2"
+        />
+      </filter>
+    </defs>
+  </svg>
+
+  <svg
+    class="ellipse-20"
+    width="602"
+    height="394"
+    viewBox="0 0 602 394"
+    fill="none"
+    xmlns="http://www.w3.org/2000/svg"
+  >
+    <g filter="url(#filter0_f_42_6)">
+      <path
+        d="M602 197C602 305.8 467.238 394 301 394C134.762 394 0 305.8 0 197C0 88.1999 134.762 0 301 0C467.238 0 602 88.1999 602 197Z"
+        fill="#79A2FF"
+      />
+    </g>
+    <defs>
+      <filter
+        id="filter0_f_42_6"
+        x="-400"
+        y="-400"
+        width="1402"
+        height="1194"
+        filterUnits="userSpaceOnUse"
+        color-interpolation-filters="sRGB"
+      >
+        <feFlood flood-opacity="0" result="BackgroundImageFix" />
+        <feBlend
+          mode="normal"
+          in="SourceGraphic"
+          in2="BackgroundImageFix"
+          result="shape"
+        />
+        <feGaussianBlur
+          stdDeviation="200"
+          result="effect1_foregroundBlur_42_6"
+        />
+      </filter>
+    </defs>
+  </svg>
+
+  <svg
+    class="ellipse-18"
+    width="602"
+    height="394"
+    viewBox="0 0 602 394"
+    fill="none"
+    xmlns="http://www.w3.org/2000/svg"
+  >
+    <g filter="url(#filter0_f_42_4)">
+      <path
+        d="M602 197C602 305.8 467.238 394 301 394C134.762 394 0 305.8 0 197C0 88.1999 134.762 0 301 0C467.238 0 602 88.1999 602 197Z"
+        fill="#79A2FF"
+      />
+    </g>
+    <defs>
+      <filter
+        id="filter0_f_42_4"
+        x="-400"
+        y="-400"
+        width="1402"
+        height="1194"
+        filterUnits="userSpaceOnUse"
+        color-interpolation-filters="sRGB"
+      >
+        <feFlood flood-opacity="0" result="BackgroundImageFix" />
+        <feBlend
+          mode="normal"
+          in="SourceGraphic"
+          in2="BackgroundImageFix"
+          result="shape"
+        />
+        <feGaussianBlur
+          stdDeviation="200"
+          result="effect1_foregroundBlur_42_4"
         />
       </filter>
     </defs>
@@ -265,11 +345,8 @@
   </div>
   <div class="confusion-matrix">Confusion matrix</div>
   <div class="classification-report">Classification report</div>
-  <img
-    class="juicy-woman-with-graph-chart-1"
-    src="juicy-woman-with-graph-chart-1.png"
-  />
   <div class="ellipse-132"></div>
+  <div class="ellipse-17"></div>
   <div class="frame-6">
     <div class="working-of-the-diagnostic-expert-system">
       Working of the Diagnostic Expert System
