Heart Disease Prediction Page uploaded

--- a/Frontend_and_UI_Design/Django_Pages_2/doc_or_pat.html
+++ b/Frontend_and_UI_Design/Django_Pages_2/doc_or_pat.html
@@ -33,9 +33,9 @@
         <div class="vertical-line"></div>
 
         <div class="you_are_a">
-            you are a
+            <div class="you">you are a</div>
             <div class="UserType">
-                <a href="#"><button class="button doctor">Doctor</button></a>
+                <a href="./dsignup.html"><button class="button doctor">Doctor</button></a>
                 <a href="./psignup.html"> <button class="button patient">Patient</button></a>
                                       
             </div>
