--- a/Frontend_and_UI_Design/Django_Pages_2/psignup.html
+++ b/Frontend_and_UI_Design/Django_Pages_2/psignup.html
@@ -102,9 +102,7 @@
 
     </form>
 
-    <div class="background">
-
-    </div>
+    <div class="background"></div>
     <div class="back2">
         <img src="./public/Ellipse_13.svg">
     </div>
