--- a/Frontend_and_UI_Design/Django_Pages_2/Diabetes_Prediction.html
+++ b/Frontend_and_UI_Design/Django_Pages_2/Diabetes_Prediction.html
@@ -54,6 +54,7 @@
             </div>
 
             <div class="grid-container">
+                <div class="row">
                 <div class="grid-item" id="grid-item1">
                     <div>High BP</div><input type="number" name="" id="">
                 </div>
@@ -66,6 +67,9 @@
                 <div class="grid-item" id="grid-item4">
                     <div>Heart Disease or Attack</div><input type="number" name="" id="">
                 </div>
+                </div>
+
+                <div class="row-center">
                 <div class="grid-item" id="grid-item5">
                     <div>BMI</div><input type="number" name="" id="">
                 </div>
@@ -74,6 +78,7 @@
                 </div>
                 <div class="grid-item" id="grid-item7">
                     <div>Age</div><input type="number" name="" id="">
+                </div>
                 </div>
             </div>
             
