Upadated Changes to Diabetes Prediction

--- a/Frontend_and_UI_Design/Django_Pages_2/form_diab.html
+++ b/Frontend_and_UI_Design/Django_Pages_2/form_diab.html
@@ -43,6 +43,7 @@
                 </div>
             </div>
 
+            
         <!-- ----------------------- Scrollable Part --------------------------- -->
         <!-- RightPart -->
 
@@ -53,7 +54,6 @@
                 <div class="Parameters">Parameters</div>
             </div>
             <div class="grid-container">
-                <div class="row">
                 <div class="grid-item" id="grid-item1">
                     <div>High BP</div>
                     <div class="radio-buttons">
@@ -98,9 +98,7 @@
                         </div>
                     </div>
                 </div>
-                </div>
 
-                <div class="row-center">
                 <div class="grid-item" id="grid-item5">
                     <div>HeartDisease or Attack</div>
                     <div class="radio-buttons">
@@ -127,7 +125,7 @@
                 <div class="grid-item" id="grid-item7">
                     <div>Age</div><input type="number" class="input2" name="Age" id="" required>
                 </div>
-                </div>
+                <!-- </div> -->
             </div>
         
 
