final responsive homepage  ready

--- a/Frontend_and_UI_Design/Django_Pages_2/homepage.html
+++ b/Frontend_and_UI_Design/Django_Pages_2/homepage.html
@@ -37,11 +37,9 @@
         <div class="est">Est 2023</div>
     </div>
     <div class="rectangle6">
-        <div class="box">
-            <div class="text">Every heartbeat matters to us</div>
-        </div>
+        <div class="box"><div class="text">Every heartbeat matters to us</div></div>
         <div class="background"></div>
-        <div class="heart"><img alt="" src="./public/heart.svg"></div>
+        <img alt="" src="./public/heart.svg">
     </div>
 
     <div class="line"></div>
