diabetes and heart from changes

--- a/Frontend_and_UI_Design/Django_Pages_2/form_diab.html
+++ b/Frontend_and_UI_Design/Django_Pages_2/form_diab.html
@@ -47,10 +47,10 @@
                 <div class="logoname">MED.AI</div>
             </a>
             <div class="Patient_ID">
-                <input type="text" class="patient_id_input" placeholder="Patient Id" name="PatientID" required maxlength="30">
+                <input type="text"  placeholder="Patient Id" name="PatientID" required maxlength="30">
             </div>
             <div class="Doctor_Name">
-                <input type="text" class="doctorNameInput" placeholder="{{ DoctorProfile.first_name }} {{DoctorProfile.last_name}}" readonly>
+                <input type="text"  placeholder="{{ DoctorProfile.first_name }} {{DoctorProfile.last_name}}" readonly>
                 <img src="./public/user.svg" alt="User" maxlength="30">
             </div>
         </div>
